--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://google.com">
+                <a class="nav-link" href="contactMe.html">
                     <button class="btn btn-outline-info">
                         Contact
                     </button>
