--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://google.com">
+                <a class="nav-link" href="contactMe.html">
                     <button class="btn btn-outline-info">
                         Contact
                     </button>
@@ -74,11 +74,11 @@
         </h3>
     </div>
     <div class="row justify-content-center">
-        <p class="col-6">
-            I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double
-            click me and you can start adding your own content and make changes to the font. Feel free to drag and drop
-            me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a
-            little more about you.
+        <p class="col-6 text-center">
+            Lover of all things literature, coffee, and music. Aspiring writer of poems, short stories and novels.
+            Adventure seeker and extreme thrill enthusiast. Love to meet new people and learn from them, it's what makes
+            this World seem smaller in comparison. Family and friends are extremely important to me, without them life's
+            ups and downs would be unimaginable.
         </p>
     </div>
 
