--- a/contactMe.html
+++ b/contactMe.html
@@ -2,9 +2,96 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>contact</title>
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="contactMe.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+            integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+            integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+            crossorigin="anonymous"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top sticky-top">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand" href="#">
+            <h3 style="color: #17b3df" class="brand">Crystal-Clear</h3>
+        </a>
+
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">
+                    <button class="btn btn-outline-info">
+                        Home
+                    </button>
+                    <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">
+                    <button class="btn btn-outline-info">
+                        About
+                    </button>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contactMe.html">
+                    <button class="btn btn-outline-info">
+                        Contact
+                    </button>
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container" style="">
+    <div class="row" style="max-height: 70px">
+        <div class="col-5">
+            <img src="img/Crystal.png" style="max-height: 60px; float: right">
+        </div>
+        <div class="col-6">
+            <img src="img/clear.png" style="max-height: 60px">
+        </div>
+    </div>
+</div>
+<div class="container" style="justify-content: space-around">
+    <div class="row justify-content-center">
+        <div class="col-4 text-center align-items-center">
+            <img src="./img/airCraft.png" class="aircraft rounded" style="max-height: 280px">
+            <h3 style="">
+                contact
+            </h3>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-4 text-center align-items-center">
+            <h5>
+                ariesgurl32@gmail.com <br> Tel: 5196543692
+            </h5>
+        </div>
+    </div>
+    <div class="row justify-content-center" style="margin-bottom: 20px">
+        <div class="col text-center align-items-center">
+            <a class="card-link" href="https://fb.com">
+                <img src="./img/fb2.png" style="max-height: 70px" class="fb rounded">
+            </a>
+            <a class="card-link" href="https://fb.com">
+                <img src="./img/insta1.png" style="max-height: 70px" class="insta rounded">
+            </a>
+            <a class="card-link" href="https://fb.com">
+                <img src="./img/snap1.png" style="max-height: 70px" class="snap rounded">
+            </a>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
