button colors changed
new btnColor class addes to index.css

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="card-body">
                 <h4 class="card-title">Coffee</h4>
                 <p class="card-text">Some quick example text</p>
-                <a href="#" class="btn btn-primary">tell me bout it</a>
+                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
         <div class="card col" style="margin: 5px">
@@ -76,7 +76,7 @@
             <div class="card-body">
                 <h4 class="card-title">Music</h4>
                 <p class="card-text">Some quick example</p>
-                <a href="#" class="btn btn-primary">tell me bout it</a>
+                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
         <div class="card col" style="margin: 5px">
@@ -84,7 +84,7 @@
             <div class="card-body">
                 <h4 class="card-title">Books</h4>
                 <p class="card-text">Some quick example text</p>
-                <a href="#" class="btn btn-primary">tell me bout it</a>
+                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
     </div>
@@ -94,7 +94,7 @@
             <div class="card-body">
                 <h4 class="card-title">Food</h4>
                 <p class="card-text">Some quick example text</p>
-                <a href="#" class="btn btn-primary">tell me bout it</a>
+                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
         <div class="card col" style="margin: 5px">
@@ -102,7 +102,7 @@
             <div class="card-body">
                 <h4 class="card-title">Writing</h4>
                 <p class="card-text">Some quick example text</p>
-                <a href="#" class="btn btn-primary">tell me bout it</a>
+                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
         <div class="card col" style="margin: 5px">
@@ -110,7 +110,7 @@
             <div class="card-body">
                 <h4 class="card-title">Shoping</h4>
                 <p class="card-text">Some quick example text</p>
-                <a href="#" class="btn btn-primary">tell me bout it</a>
+                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
     </div>
