fixed layout for sm and md size
home page content needs upgradation

--- a/about.html
+++ b/about.html
@@ -74,6 +74,9 @@
         </h3>
     </div>
     <div class="row justify-content-center">
+        <h2 class="col-12 font-weight-bold text-center">
+            I'm Crystal
+        </h2>
         <p class="col-6 text-center">
             Lover of all things literature, coffee, and music. Aspiring writer of poems, short stories and novels.
             Adventure seeker and extreme thrill enthusiast. Love to meet new people and learn from them, it's what makes
