--- a/contactMe.html
+++ b/contactMe.html
@@ -65,31 +65,35 @@
 <div class="container" style="justify-content: space-around">
     <div class="row justify-content-center">
         <div class="col-4 text-center align-items-center">
-            <img src="./img/airCraft.png" class="aircraft rounded" style="max-height: 280px">
-            <h3 style="">
+            <img src="./img/airCraft.png" class="aircraft rounded d-none d-md-inline-flex d-lg-inline-flex"
+                 style="max-width: 200px;min-height: 60px">
+            <h3 style="" class="text-center">
                 contact
             </h3>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-4 text-center align-items-center">
-            <h5>
+        <div class="col-6 text-center align-items-center">
+            <h5 class="text-center">
                 ariesgurl32@gmail.com <br> Tel: 5196543692
             </h5>
         </div>
     </div>
     <div class="row justify-content-center" style="margin-bottom: 20px">
-        <div class="col text-center align-items-center">
-            <a class="card-link" href="https://fb.com">
-                <img src="./img/fb2.png" style="max-height: 70px" class="fb rounded">
-            </a>
-            <a class="card-link" href="https://fb.com">
-                <img src="./img/insta1.png" style="max-height: 70px" class="insta rounded">
-            </a>
-            <a class="card-link" href="https://fb.com">
-                <img src="./img/snap1.png" style="max-height: 70px" class="snap rounded">
-            </a>
-        </div>
+        <!--<div class="col text-center align-items-center">-->
+        <a class="col-12 col col-md-4 col-sm-12 col-lg-3 align-items-center text-center" href="https://fb.com"
+           style="padding: 5px">
+            <img src="./img/fb2.png" style="max-height: 100px" class="fb rounded">
+        </a>
+        <a class=" col-12 col col-md-4 col-sm-12 col-lg-3 text-center" href="https://fb.com"
+           style="padding:5px">
+            <img src="./img/insta1.png" style="max-height: 100px" class="insta rounded">
+        </a>
+        <a class="col-12 col col-md-4 col-sm-12 col-lg-3 text-center" href="https://fb.com"
+           style="padding: 5px">
+            <img src="./img/snap1.png" style="max-height: 100px" class="snap rounded">
+        </a>
+        <!--</div>-->
     </div>
 </div>
 
