--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </div>
 <div class="container" style="justify-content: space-around">
     <div class="row align-items-center justify-content-center" style="">
-        <div class="card col" style="margin: 5px">
+        <div class="card col-12 col col-md-4 col-sm-5" style="margin: 5px">
             <img class="card-img-top" src="./img/coffee.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Coffee</h4>
@@ -71,7 +71,7 @@
                 <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
-        <div class="card col" style="margin: 5px">
+        <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
             <img class="card-img-top" src="./img/music.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Music</h4>
@@ -79,7 +79,7 @@
                 <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
-        <div class="card col" style="margin: 5px">
+        <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
             <img class="card-img-top" src="./img/book1.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Books</h4>
@@ -88,8 +88,8 @@
             </div>
         </div>
     </div>
-    <div class="row align-items-center justify-content-center" style="flex-grow:1;margin-left: 30px;margin-right: 30px">
-        <div class="card col" style="margin: 5px">
+    <div class="row align-items-center justify-content-center" style="margin: 5px">
+        <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
             <img class="card-img-top" src="./img/food1.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Food</h4>
@@ -97,7 +97,7 @@
                 <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
-        <div class="card col" style="margin: 5px">
+        <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
             <img class="card-img-top" src="./img/writer1.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Writing</h4>
@@ -105,7 +105,7 @@
                 <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
             </div>
         </div>
-        <div class="card col" style="margin: 5px">
+        <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
             <img class="card-img-top" src="./img/shopping1.png" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Shoping</h4>
