Coffee , Songs , Writings collapse added
coffee links need to be disabled , writings need 2 more pages in website - poems and thoughts.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,23 @@
             <div class="card-body">
                 <h4 class="card-title">Coffee</h4>
                 <p class="card-text">Some quick example text</p>
-                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
+                <button class="btn btn-primary btnColor" type="button" data-toggle="collapse"
+                        data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    tell me bout it
+                </button>
+
+                <div class="collapse" id="collapseExample">
+                    <div class="" style="margin-top: 15px">
+                        my favourite Coffee shops...
+                        <div class="list-group">
+                            <a href="#collapseExample"
+                               class="list-group-item list-group-item-action list-group-item-success">Starbucks</a>
+                            <a href="#collapseExample"
+                               class="list-group-item list-group-item-action list-group-item-info">Tim
+                                Hortons</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
@@ -76,7 +92,72 @@
             <div class="card-body">
                 <h4 class="card-title">Music</h4>
                 <p class="card-text">Some quick example</p>
-                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
+                <button class="btn btn-primary btnColor" type="button" data-toggle="collapse"
+                        data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
+                    tell me bout it
+                </button>
+                <div class="collapse" id="collapseExample2">
+                    <div class="" style="margin-top: 15px">
+                        my all time favourite playlist...
+                        <a href="https://open.spotify.com/user/aries_gurl_546/playlist/0NsaCCwmCoInr8g5Y6vTyo?si=fj2ergVP"
+                           class="btn btn-dark" style="margin-top: 10px">take me to Spotify</a>
+
+                        <div class="list-group" style="margin-top: 10px">
+                            <button class="btn btn-danger" type="button" data-toggle="collapse"
+                                    data-target="#collapseExample3" aria-expanded="false"
+                                    aria-controls="collapseExample">
+                                YouTube Links
+                            </button>
+                            <div class="collapse" id="collapseExample3" style="margin-top: 10px">
+                                <a href="https://www.youtube.com/watch?v=lWA2pjMjpBs"
+                                   class="list-group-item list-group-item-action list-group-item-success">Diamonds</a>
+                                <a href="https://www.youtube.com/watch?v=2ggzxInyzVE"
+                                   class="list-group-item list-group-item-action list-group-item-info">Glad You Came</a>
+                                <a href="https://www.youtube.com/watch?v=JRfuAukYTKg"
+                                   class="list-group-item list-group-item-action list-group-item-success">Titanium(Sia)</a>
+                                <a href="https://www.youtube.com/watch?v=hzp4upS8M8Y"
+                                   class="list-group-item list-group-item-action list-group-item-info">I Believe I'm
+                                    Fine</a>
+                                <a href="https://www.youtube.com/watch?v=ktvTqknDobU"
+                                   class="list-group-item list-group-item-action list-group-item-success">Radioactive</a>
+                                <a href="https://www.youtube.com/watch?v=47dtFZ8CFo8"
+                                   class="list-group-item list-group-item-action list-group-item-info">Safe And
+                                    Sound</a>
+                                <a href="https://www.youtube.com/watch?v=KRaWnd3LJfs"
+                                   class="list-group-item list-group-item-action list-group-item-success">Payphone</a>
+                                <a href="https://www.youtube.com/watch?v=rClUOdS5Zyw"
+                                   class="list-group-item list-group-item-action list-group-item-info">Want To Want
+                                    Me</a>
+                                <a href="https://www.youtube.com/watch?v=CTFtOOh47oo"
+                                   class="list-group-item list-group-item-action list-group-item-success">Unforgettable</a>
+                                <a href="https://www.youtube.com/watch?v=Io0fBr1XBUA"
+                                   class="list-group-item list-group-item-action list-group-item-info">Don't Let Me
+                                    Down</a>
+                                <a href="https://www.youtube.com/watch?v=PIh2xe4jnpk"
+                                   class="list-group-item list-group-item-action list-group-item-success">Rude</a>
+                                <a href="https://www.youtube.com/watch?v=mWRsgZuwf_8"
+                                   class="list-group-item list-group-item-action list-group-item-info">Demons</a>
+                                <a href="https://www.youtube.com/watch?v=nYh-n7EOtMA"
+                                   class="list-group-item list-group-item-action list-group-item-success">Cheap
+                                    Thrills</a>
+                                <a href="https://www.youtube.com/watch?v=e-fA-gBCkj0"
+                                   class="list-group-item list-group-item-action list-group-item-info">Locked Out Of
+                                    Heaven</a>
+                                <a href="https://www.youtube.com/watch?v=lp-EO5I60KA"
+                                   class="list-group-item list-group-item-action list-group-item-success">Thinking Out
+                                    Loud</a>
+                                <a href="https://www.youtube.com/watch?v=VbfpW0pbvaU"
+                                   class="list-group-item list-group-item-action list-group-item-info">Stitches</a>
+                                <a href="https://www.youtube.com/watch?v=fwK7ggA3-bU"
+                                   class="list-group-item list-group-item-action list-group-item-success">One More
+                                    Night</a>
+                                <a href="https://www.youtube.com/watch?v=hT_nvWreIhg"
+                                   class="list-group-item list-group-item-action list-group-item-info">Counting
+                                    Stars</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
@@ -102,7 +183,74 @@
             <div class="card-body">
                 <h4 class="card-title">Writing</h4>
                 <p class="card-text">Some quick example text</p>
-                <a href="#" class="btn btn-primary btnColor">tell me bout it</a>
+                <button class="btn btn-primary btnColor" type="button" data-toggle="collapse"
+                        data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
+                    tell me bout it
+                </button>
+
+                <div class="collapse" id="collapseExample4">
+                    <div class="" style="margin-top: 15px">
+                        some stuff written by me
+                        <div class="container">
+                            <a href="https://www.tumblr.com/blog/ariesgurl" class="btn btn-primary btn-dark">Link to
+                                Tumblr</a>
+                        </div>
+
+                        <div class="container">
+                            <button class="btn btn-danger" type="button" data-toggle="collapse"
+                                    data-target="#collapseExample5" aria-expanded="false"
+                                    aria-controls="collapseExample" style="margin-top: 10px">
+                                Poems
+                            </button>
+                            <div class="collapse" id="collapseExample5" style="margin-top: 10px">
+                                <div class="card">
+                                    <div class="card-header">
+                                        It's You
+                                    </div>
+                                    <div class="card-body">
+                                        <p>
+                                            It’s you, who brings the sunshine to my eyes,
+                                            Even on the most cloudy days.
+                                            It’s you, who brings a smile to my face
+                                            By just sending me the most random messages.
+                                            It’s you, who brings the uncontrollable laughter,
+                                            That seems so infectious that everyone wants to join in.
+                                            It’s you, who makes my heart skip a beat
+                                            Just at the mere mention of your name.
+                                            It’s you, who brings butterflies to my stomach,
+                                            With endless thoughts about possiblilites to come.
+                                            It’s you, who makes me weak in the knees,
+                                            By you just being your usual charming, goofy self.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="list-group">
+                                    <a href="#collapseExample"
+                                       class="list-group-item list-group-item-action list-group-item-success">Starbucks</a>
+                                    <a href="#collapseExample"
+                                       class="list-group-item list-group-item-action list-group-item-info">Tim
+                                        Hortons</a>
+                                </div>
+                            </div>
+                            <button class="btn btn-danger" type="button" data-toggle="collapse"
+                                    data-target="#collapseExample6" aria-expanded="false"
+                                    aria-controls="collapseExample" style="margin-top: 10px">
+                                Thoughts
+                            </button>
+                            <div class="collapse" id="collapseExample6" style="margin-top: 10px">
+                                <div class="list-group">
+                                    <a href="#collapseExample"
+                                       class="list-group-item list-group-item-action list-group-item-success">Starbucks</a>
+                                    <a href="#collapseExample"
+                                       class="list-group-item list-group-item-action list-group-item-info">Tim
+                                        Hortons</a>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
