added poems and thoughts page
collapse style (bootstrap) used

--- a/index.html
+++ b/index.html
@@ -196,56 +196,14 @@
                                 Tumblr</a>
                         </div>
 
-                        <div class="container">
-                            <button class="btn btn-danger" type="button" data-toggle="collapse"
-                                    data-target="#collapseExample5" aria-expanded="false"
-                                    aria-controls="collapseExample" style="margin-top: 10px">
+                        <div class="container" style="color: white" >
+                            <a class="btn btn-danger" style="margin-top: 10px" href="poems.html">
                                 Poems
-                            </button>
-                            <div class="collapse" id="collapseExample5" style="margin-top: 10px">
-                                <div class="card">
-                                    <div class="card-header">
-                                        It's You
-                                    </div>
-                                    <div class="card-body">
-                                        <p>
-                                            It’s you, who brings the sunshine to my eyes,
-                                            Even on the most cloudy days.
-                                            It’s you, who brings a smile to my face
-                                            By just sending me the most random messages.
-                                            It’s you, who brings the uncontrollable laughter,
-                                            That seems so infectious that everyone wants to join in.
-                                            It’s you, who makes my heart skip a beat
-                                            Just at the mere mention of your name.
-                                            It’s you, who brings butterflies to my stomach,
-                                            With endless thoughts about possiblilites to come.
-                                            It’s you, who makes me weak in the knees,
-                                            By you just being your usual charming, goofy self.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="list-group">
-                                    <a href="#collapseExample"
-                                       class="list-group-item list-group-item-action list-group-item-success">Starbucks</a>
-                                    <a href="#collapseExample"
-                                       class="list-group-item list-group-item-action list-group-item-info">Tim
-                                        Hortons</a>
-                                </div>
-                            </div>
-                            <button class="btn btn-danger" type="button" data-toggle="collapse"
-                                    data-target="#collapseExample6" aria-expanded="false"
-                                    aria-controls="collapseExample" style="margin-top: 10px">
+                            </a>
+
+                            <a class="btn btn-danger" style="margin-top: 10px" href="thoughts.html">
                                 Thoughts
-                            </button>
-                            <div class="collapse" id="collapseExample6" style="margin-top: 10px">
-                                <div class="list-group">
-                                    <a href="#collapseExample"
-                                       class="list-group-item list-group-item-action list-group-item-success">Starbucks</a>
-                                    <a href="#collapseExample"
-                                       class="list-group-item list-group-item-action list-group-item-info">Tim
-                                        Hortons</a>
-                                </div>
-                            </div>
+                            </a>
                         </div>
 
 
