--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <title>home</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="index.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
             integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
@@ -14,6 +14,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
             integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
             crossorigin="anonymous"></script>
+    <script src="blog.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top sticky-top">
@@ -62,9 +64,9 @@
     </div>
 </div>
 <div class="container" style="justify-content: space-around">
-    <div class="row align-items-center justify-content-center" style="">
+    <div class="row align-items-center justify-content-center" style="" id="row1">
         <div class="card col-12 col col-md-4 col-sm-5" style="margin: 5px">
-            <img class="card-img-top" src="./img/coffee.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./img/Coffee.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Coffee</h4>
                 <p class="card-text">Some quick example text</p>
@@ -88,7 +90,7 @@
             </div>
         </div>
         <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
-            <img class="card-img-top" src="./img/music.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./img/Music.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Music</h4>
                 <p class="card-text">Some quick example</p>
@@ -161,7 +163,7 @@
             </div>
         </div>
         <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
-            <img class="card-img-top" src="./img/book1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./img/Books.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Books</h4>
                 <p class="card-text">Some quick example text</p>
@@ -169,9 +171,9 @@
             </div>
         </div>
     </div>
-    <div class="row align-items-center justify-content-center" style="margin: 5px">
+    <div class="row align-items-center justify-content-center" style="margin: 5px" id="row2">
         <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
-            <img class="card-img-top" src="./img/food1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./img/Food.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Food</h4>
                 <p class="card-text">Some quick example text</p>
@@ -179,7 +181,7 @@
             </div>
         </div>
         <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
-            <img class="card-img-top" src="./img/writer1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./img/Writing.jpg" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Writing</h4>
                 <p class="card-text">Some quick example text</p>
@@ -196,7 +198,7 @@
                                 Tumblr</a>
                         </div>
 
-                        <div class="container" style="color: white" >
+                        <div class="container" style="color: white">
                             <a class="btn btn-danger" style="margin-top: 10px" href="poems.html">
                                 Poems
                             </a>
@@ -212,7 +214,7 @@
             </div>
         </div>
         <div class="card col-12 col col-md-4 col-sm-5 col-lg-3" style="margin: 5px">
-            <img class="card-img-top" src="./img/shopping1.png" alt="Card image cap">
+            <img class="card-img-top" src="./img/Shoping.png" alt="Card image cap">
             <div class="card-body">
                 <h4 class="card-title">Shoping</h4>
                 <p class="card-text">Some quick example text</p>
