Fix: image upload

--- a/public/add_catagory.html
+++ b/public/add_catagory.html
@@ -73,7 +73,7 @@
         <label for="description">Description text</label>
         <input type="text" id="description" name="description" class="row">
         <label for="pic">Upload pic</label>
-        <input id="pic" name="file" type="file" class="row">
+        <input id="pic" name="catagory-pic" type="file" class="row">
         <button id="btnEntryAdd" class="btn btn-primary mt-3">Add</button>
     </form>
 </div>
