/addpost,addcatagory - image support added

--- a/public/add_posts.html
+++ b/public/add_posts.html
@@ -77,6 +77,8 @@
         <input type="text" id="name" class="row" name="name">
         <label for="content">content</label>
         <input type="text" id="content" name="content" class="row">
+        <label for="pic">Upload pic</label>
+        <input id="pic" name="post-pic" type="file" class="row">
 
         <button id="btnEntryAdd" class="btn btn-primary mt-3">Add</button>
     </form>
