--- a/public/posts.html
+++ b/public/posts.html
@@ -66,7 +66,7 @@
 
 <div class="container p-4 my-5 justify-content-center ">
     <h3 class="text-center display-3">Posts</h3>
-    <div id="postContainer">
+    <div id="postContainer" class="row">
         <div class="card">
             <div class="card-header">Post1</div>
             <img src="#" class="card-img">
