add_posts,catagory fix

--- a/public/add_posts.html
+++ b/public/add_posts.html
@@ -66,7 +66,7 @@
 
 <div class="container p-4 my-5 justify-content-center ">
     <h3 class="text-center">add posts</h3>
-    <form class="my-1" id="design_form" action="http://localhost:2222/api/posts" method="post"
+    <form class="my-1" id="design_form" action="/api/posts" method="post"
           enctype="multipart/form-data">
         <label for="parentCategory">Catagory</label>
         <select class="custom-select m-3" id="parentCategory" name="parentCategory">
