--- a/public/add_catagory.html
+++ b/public/add_catagory.html
@@ -66,7 +66,7 @@
 
 <div class="container p-4 my-5 justify-content-center ">
     <h3 class="text-center">Add Category</h3>
-    <form class="my-1" id="design_form" action="http://localhost:2222/api/catagory" method="post"
+    <form class="my-1" id="design_form" action="/api/catagory" method="post"
           enctype="multipart/form-data">
         <label for="name">Category Name</label>
         <input type="text" id="name" class="row" name="name">
